--- a/About.html
+++ b/About.html
@@ -55,7 +55,7 @@
                                 Bacon ipsum dolor amet officia pork chop hamburger, esse turkey pariatur do non fatback jowl ball tip boudin aliqua. Minim aliqua dolore 
                                 biltong, ham hock short loin sausage ball tip prosciutto nostrud turkey irure ground round landjaeger. Tenderloin labore dolore kevin sausage 
                                 biltong. Enim salami est pastrami filet mignon. Brisket id sirloin sunt. Shoulder pork belly aliqua magna sunt meatloaf fugiat velit 
-                                kevin commodo esse meatball laboris pig quis. Jerky spare ribs burgdoggen proident.
+                                kevin commodo esse meatball laboris pig quis. god bless all and god is first
                             </p>
                             <p>
                                 Adaptogen aesthetic VHS blog williamsburg, lumbersexual fingerstache cloud bread laboris flannel before they sold out banjo pok pok tbh schlitz. 
