--- a/About.html
+++ b/About.html
@@ -65,7 +65,8 @@
                                 Kogi freegan do migas quis truffaut church-key sustainable in post-ironic. Sriracha cillum four dollar toast fashion axe man braid etsy 
                                 austin pickled offal. Letterpress sed banh mi hella four dollar toast mustache sustainable af cillum taxidermy sartorial. Neutra hashtag ad 
                                 cillum viral. Heirloom VHS lumbersexual aliqua. Man braid 90's brunch aliqua scenester iPhone blog deep v bespoke listicle drinking vinegar 
-                                intelligentsia. Seitan williamsburg cloud bread chicharrones irure af fam.
+                                intelligentsia. Seitan williamsburg cloud bread chicharrones irure af fam. my name is ian and i am second,
+                                god is first always..... god makes me stronger
                             </p>
                         </div>
                     </div>
