--- a/About.html
+++ b/About.html
@@ -66,7 +66,7 @@
                                 austin pickled offal. Letterpress sed banh mi hella four dollar toast mustache sustainable af cillum taxidermy sartorial. Neutra hashtag ad 
                                 cillum viral. Heirloom VHS lumbersexual aliqua. Man braid 90's brunch aliqua scenester iPhone blog deep v bespoke listicle drinking vinegar 
                                 intelligentsia. Seitan williamsburg cloud bread chicharrones irure af fam. my name is ian and i am second,
-                                god is first always..... god makes me stronger
+                                god is first always..... god makes me stronger 2nd pr god is good
                             </p>
                         </div>
                     </div>
